# jupp

./: .travis.yml  COPYING  ChangeLog  HINTS  INFO  LIST  Make-w32.sh  Make.dos  Makefile  Makefile.am  Makefile.bsd-wrapper  Makefile.in  NEWS  README  README.cvs  TODO  VERSION  acinclude.m4  aclocal.m4  autoconf.h.in  autogen.sh  b.c  b.h  blocks.c  blocks.h  builtin.c  builtin.h  builtins.c  bw-lgen.inc  bw.c  bw.h  charmap.c  charmap.h  cmd.c  cmd.h  compat.c  config.guess  config.h  config.sub  configure  (+99 more)
.github/workflows/: codeql-analysis.yml  gha-update.yml
charmaps/: klingon.in
docs/: help-system.html
syntax/: asm.jsf.in  c.jsf.in  conf.jsf.in  csh.jsf.in  diff.jsf.in  fortran.jsf.in  html.jsf.in  java.jsf.in  lisp.jsf.in  mail.jsf.in  mason.jsf.in  pascal.jsf.in  perl.jsf.in  php.jsf.in  python.jsf.in  sh.jsf.in  tcl.jsf.in  tex.jsf.in  verilog.jsf.in  vhdl.jsf.in  xml.jsf.in
